--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Pacing.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Pacing.cshtml
@@ -1,9 +1,14 @@
 ﻿@model DirectAgents.Web.Areas.TD.Models.CampaignPacingVM
+@{
+    bool oneCamp = !string.IsNullOrEmpty(Request["campId"]);
+    string date = Request["date"]; // null if current month
+}
 
 <h2>Budget and Pacing</h2>
 
 <table>
 <tr>
+    <th>ExtAccts</th>
     <th>Advertiser</th>
     <th>Campaign</th>
     <th>Budget</th>
@@ -19,11 +24,13 @@
 </tr>
 @foreach (var cbStat in Model.CampaignStats)
 {
+    string expandText = (oneCamp ? "" : "+") + cbStat.Campaign.ExtAccounts.Count.ToString();
 <tr>
+    <td>@Html.ActionLink(expandText, "Pacing", new { campId = cbStat.Campaign.Id, date = date })</td>
     <td>@cbStat.Campaign.Advertiser.Name</td>
     <td>@cbStat.Campaign.Name</td>
-    <td>@cbStat.Budget.MediaSpend.ToString("C")</td>
-    <td>@cbStat.Stats.Cost.ToString("C")</td>
+    <td>@cbStat.Budget.MediaSpend().ToString("C")</td>
+    <td>@cbStat.Cost.ToString("C")</td>
     <td>@cbStat.MediaSpend().ToString("C")</td>
     <td>@cbStat.TotalRevenue().ToString("C")</td>
     <td>@cbStat.Margin().ToString("C")</td>
@@ -36,13 +43,13 @@ if (cbStat.BudgetStatsByExtAccount != null)
     foreach (var extAcctBStat in cbStat.BudgetStatsByExtAccount)
     {
 <tr>
-    <td colspan="3" style="text-align:right">@extAcctBStat.Stats.ExtAccount.Name - @extAcctBStat.Stats.ExtAccount.Platform.Name</td>
-    <td>@extAcctBStat.Stats.Cost.ToString("C")</td>
+    <td colspan="4" style="text-align:right">@extAcctBStat.ExtAccount.Name - @extAcctBStat.ExtAccount.Platform.Name</td>
+    <td>@extAcctBStat.Cost.ToString("C")</td>
     <td>@extAcctBStat.MediaSpend().ToString("C")</td>
     <td>@extAcctBStat.TotalRevenue().ToString("C")</td>
     <td>@extAcctBStat.Margin().ToString("C")</td>
     <td></td>
-    <td>@extAcctBStat.Stats.ExtAccount.Platform.Name</td>
+    <td>@extAcctBStat.ExtAccount.Platform.Name</td>
 </tr>
     }
 }
