--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
@@ -1,4 +1,4 @@
-﻿@model DirectAgents.Domain.Entities.TD.BudgetWithStats
+﻿@model DirectAgents.Domain.Entities.TD.TDStatWithBudget
 @{
     var m = Model; // stats
     var budg = Model.Budget;
