--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -52,6 +52,7 @@ table th,td {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
+            <li><a href="@Url.Action("Pacing", "Campaigns", new { showPerfStats = true })">Performance</a></li>
             <li><a href="@Url.Action("Index", "Advertisers")">Advertisers</a></li>
             <li><a href="@Url.Action("Index", "Accounts")">ExternalAccounts</a></li>
         </ul>
