eomweb- add Net 60 for advertiser payment terms

--- a/1/EomTool/EomToolWeb/Views/Advertisers/Edit.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Edit.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Edit Advertiser";
     var statusList = new[] { "", "New", "New1", "New2", "Existing" };
-    var paymentTermsList = new[] { "", "Net 7", "Net 7/Biweekly", "Net 15", "Net 30", "Net 45", "Net 60", "Retainer", "Retainer/Term" };
+    var paymentTermsList = new[] { "", "Net 7", "Net 7/Biweekly", "Net 15", "Net 20", "Net 30", "Net 45", "Net 60", "Retainer", "Retainer/Term" };
     var invoicingStatusList = new[] { "", "Not Invoiced", "Partially Invoiced", "Invoiced", "Paid", "Partially Paid", "Positive Retainer", "Negative Retainer" };
 }
 
