mv TDStat dto objects to DTO namespace

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DirectAgents.Domain.Entities.TD
-@model IEnumerable<TDStat>
+@model IEnumerable<DirectAgents.Domain.DTO.TDStat>
 
 <h2>External Account Stats</h2>
 
