show SalesRep,AM in Pacing view

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Pacing.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Pacing.cshtml
@@ -50,7 +50,8 @@
     <td>@cbStat.FractionReached().ToString("#0.##%")</td>
 @if (!Model.ShowPerfStats)
 {
-    // SalesRep, AM
+    <td>@cbStat.Campaign.Advertiser.SalesRepName()</td>
+    <td>@cbStat.Campaign.Advertiser.AMName()</td>
 } else {
     <td>@cbStat.Impressions.ToString("N0")</td>
     <td>@cbStat.Clicks.ToString("N0")</td>
