Budget/Pacing, Performance grids

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -54,6 +54,7 @@ table th,td {
         <ul class="nav navbar-nav">
             <li><a href="@Url.Action("Pacing", "Campaigns", new { showPerfStats = true })">Performance</a></li>
             <li><a href="@Url.Action("Index", "Advertisers")">Advertisers</a></li>
+            <li><a href="@Url.Action("Index", "Campaigns")">Campaigns</a></li>
             <li><a href="@Url.Action("Index", "Accounts")">ExternalAccounts</a></li>
         </ul>
     </div>
