--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
@@ -9,8 +9,10 @@
 
 <table>
 <tr>
+    <th></th>
     <th>Advertiser</th>
     <th>Campaign</th>
+    <th>ID</th>
     <th>External Accounts</th>
     <th>Platforms</th>
     <th>Stats</th>
@@ -18,8 +20,10 @@
 @foreach (var camp in Model)
 {
 <tr>
+    <td>@Html.ActionLink("Edit", "Edit", new { id = camp.Id })</td>
     <td>@camp.Advertiser.Name</td>
     <td>@camp.Name</td>
+    <td>@camp.Id</td>
     <td style="text-align:center">
         @Html.ActionLink(camp.ExtAccounts.Count.ToString(), "Index", "Accounts", new { campId = camp.Id }, null)
         (@Html.ActionLink("stats by ext acct", "Account", "Stats", new { campId = camp.Id }, null))
