--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -52,10 +52,28 @@ table th,td {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li><a href="@Url.Action("Pacing", "Campaigns", new { showPerfStats = true })">Performance</a></li>
-            <li><a href="@Url.Action("Index", "Advertisers")">Advertisers</a></li>
-            <li><a href="@Url.Action("Index", "Campaigns")">Campaigns</a></li>
-            <li><a href="@Url.Action("Index", "Accounts")">ExternalAccounts</a></li>
+@*            <li><a href="@Url.Action("Pacing", "Campaigns", new { showPerfStats = true })">Performance</a></li>*@
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Views <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="@Url.Action("PacingGrid", "Campaigns")">Budget & Pacing</a></li>
+                    <li><a href="@Url.Action("PerformanceGrid", "Campaigns")">Performance</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Setup <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="@Url.Action("Index", "Advertisers")">Advertisers</a></li>
+                    <li><a href="@Url.Action("Index", "Campaigns")">Campaigns</a></li>
+                    <li><a href="@Url.Action("Index", "Accounts")">ExternalAccounts</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stats <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="@Url.Action("Account", "Stats")">By ExternalAccount</a></li>
+                </ul>
+            </li>
         </ul>
     </div>
     </div>
