--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
@@ -3,6 +3,7 @@
     var today = DateTime.Today;
     var startOfMonth = new DateTime(today.Year, today.Month, 1);
     var lastMonth = startOfMonth.AddMonths(-1);
+    string advId = Request["advid"];
 }
 
 <h2>Campaigns</h2>
@@ -15,22 +16,38 @@
     <th>External Accounts</th>
     <th>Platforms</th>
     <th>Stats</th>
+    <th></th>
 </tr>
 @foreach (var camp in Model)
 {
 <tr>
-    <td>@Html.ActionLink("Edit", "Edit", new { id = camp.Id })</td>
+    <td>@Html.ActionLink("Edit", "Edit", new { id = camp.Id, advId = advId })</td>
     <td>@camp.Advertiser.Name</td>
     <td>@camp.Name</td>
     <td style="text-align:center">
-        @Html.ActionLink(camp.ExtAccounts.Count.ToString(), "Index", "Accounts", new { campId = camp.Id }, null)
-        (@Html.ActionLink("stats by ext acct", "Account", "Stats", new { campId = camp.Id }, null))
+        @if (camp.ExtAccounts.Any()) {
+            @Html.ActionLink("show(" + camp.ExtAccounts.Count + ")", "Index", "Accounts", new { campId = camp.Id }, null)
+        } else {
+            <text>0</text>
+        }
     </td>
     <td>@string.Join(",", camp.ExtAccounts.Select(a => a.Platform).Distinct().Select(p => p.Name))</td>
     <td>
         @Html.ActionLink("MTD", "MTD", "Stats", new { campId = camp.Id }, null) |
-        @Html.ActionLink("Last Month", "MTD", "Stats", new { campId = camp.Id, date = lastMonth.ToShortDateString() }, null)
+        @Html.ActionLink("Last Month", "MTD", "Stats", new { campId = camp.Id, date = lastMonth.ToShortDateString() }, null) |
+        @Html.ActionLink("By Ext.Account", "Account", "Stats", new { campId = camp.Id }, null)
+    </td>
+    <td>
+        @if (!camp.ExtAccounts.Any()) {
+            @Html.ActionLink("Delete", "Delete", new { id = camp.Id, advId = advId })
+        }
     </td>
 </tr>
 }
 </table>
+<br />
+@if (!string.IsNullOrWhiteSpace(advId))
+{
+    @Html.ActionLink("New Campaign", "CreateNew", new { advId = advId })
+    <br />
+}
