--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -61,18 +61,19 @@ table th,td {
                 </ul>
             </li>
             <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stats <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="@Url.Action("Account", "Stats")">By ExternalAccount</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Setup <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="@Url.Action("Index", "Platforms")">Platforms</a></li>
                     <li><a href="@Url.Action("Index", "Advertisers")">Advertisers</a></li>
                     <li><a href="@Url.Action("Index", "Campaigns")">Campaigns</a></li>
                     <li><a href="@Url.Action("Index", "Accounts")">ExternalAccounts</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stats <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="@Url.Action("Account", "Stats")">By ExternalAccount</a></li>
+                    <li><a href="@Url.Action("Index", "Employees")">Employees</a></li>
                 </ul>
             </li>
         </ul>
