DBM- mv ioID from Creative to CreativeDailySummary

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Accounts/MaintenanceDetail.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Accounts/MaintenanceDetail.cshtml
@@ -5,5 +5,7 @@
 }
 
 Latest Stats: @(latestStatString ?? "(none)")
-&nbsp;&nbsp;
-<a href="#" onclick="SynchAccount(@Model.ExtAccount.Id, '@synchUrl'); return false">Synch</a>
+@if (Model.Synchable) {
+    <text>&nbsp;&nbsp;</text>
+    <a href="#" onclick="SynchAccount(@Model.ExtAccount.Id, '@synchUrl'); return false">Synch</a>
+}
