--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Generic.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Generic.cshtml
@@ -39,16 +39,16 @@
     var tot = Model.StatsTotal;
 <tr>
     <th>@tot.Name</th>
-    <th>@tot.Impressions</th>
-    <th>@tot.Clicks</th>
-    <th>@tot.CTR</th>
-    <th>@tot.CPM</th>
-    <th>@tot.CPC</th>
-    <th>@tot.CPA</th>
-    <th>@tot.PostClickConv</th>
-    <th>@tot.PostViewConv</th>
-    <th>@tot.TotalConv</th>
-    <th>@tot.Cost</th>
+    <th style="text-align:right">@tot.Impressions</th>
+    <th style="text-align:right">@tot.Clicks</th>
+    <th style="text-align:center">@tot.CTR</th>
+    <th style="text-align:center">@tot.CPM</th>
+    <th style="text-align:center">@tot.CPC</th>
+    <th style="text-align:center">@tot.CPA</th>
+    <th style="text-align:right">@tot.PostClickConv</th>
+    <th style="text-align:right">@tot.PostViewConv</th>
+    <th style="text-align:right">@tot.TotalConv</th>
+    <th style="text-align:right">@tot.Cost</th>
 </tr>
 }
 </table>
