--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<DirectAgents.Domain.Entities.TD.Platform>
-
+@{
+    var lastMonth = DateTime.Today.AddMonths(-1);
+    lastMonth = new DateTime(lastMonth.Year, lastMonth.Month, 1);
+}
 <h2>Platforms</h2>
 
 <table>
@@ -7,6 +10,7 @@
     <th>Code</th>
     <th>Name</th>
     <th>Show...</th>
+    <th>Stats</th>
     <th></th>
 </tr>
 @foreach (var plat in Model)
@@ -14,9 +18,10 @@
 <tr>
     <td>@plat.Code</td>
     <td>@plat.Name</td>
+    <td>@Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "Accounts", new { platform = plat.Code }, null)</td>
     <td>
-        @Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "Accounts", new { platform = plat.Code }, null) |
-        @Html.ActionLink("Stats", "Account", "Stats", new { platform = plat.Code }, null)
+        @Html.ActionLink("MTD", "Account", "Stats", new { platform = plat.Code }, null) |
+        @Html.ActionLink("LastMonth", "Account", "Stats", new { platform = plat.Code, date = lastMonth.ToShortDateString() }, null)
     </td>
     <td>@Html.ActionLink("Maintenance", "Maintenance", new { id = plat.Id })</td>
 </tr>
