--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Maintenance.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Maintenance.cshtml
@@ -3,21 +3,21 @@
 
 <h2>@Model.Name - Maintenance</h2>
 
-External Accounts:
-<div id="grid"></div>
-
 @if (Model.Code == Platform.Code_AdRoll)
 {
 }
 @if (Model.Code == Platform.Code_DBM)
 {
+    <div id="divSynchPlatform">
+        @Html.ActionLink("Synch All Accounts", "Synch", new { id = Model.Id }, new { onclick = "$('#divSynchPlatform').html('Synching...')" })
+    </div>
+    <br />
 }
 
+External Accounts:
+<div id="grid"></div>
+
 @section scripts {
-<script type="text/x-kendo-template" id="acctDetailTemplate">
-    hello detail #= Name #
-    <a href="@Url.Action("Test")?theid=#= Id #">clicky</a>
-</script>
 <script>
     $(document).ready(function () {
         SetupGrid();
@@ -25,6 +25,7 @@ External Accounts:
 
     function SetupGrid() {
         var datasource = new kendo.data.DataSource({
+            pageSize: 100,
             transport: {
                 read: {
                     url: '@Url.Action("IndexData", "Accounts", new { platform = Model.Code })',
@@ -32,7 +33,8 @@ External Accounts:
                 }
             },
             schema: {
-                data: 'data'
+                data: 'data',
+                total: 'total'
             }
         });
 
@@ -40,8 +42,8 @@ External Accounts:
             dataSource: datasource,
             height: 350,
             filterable: true,
+            pageable: true,
             sortable: true,
-            //detailTemplate: kendo.template($('#acctDetailTemplate').html()),
             detailInit: detailInit,
             columns: [
                 { field: 'Id', width: 50 },
