--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Maintenance.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Maintenance.cshtml
@@ -8,8 +8,8 @@
 }
 @if (Model.Code == Platform.Code_DBM)
 {
-    <div id="divSynchPlatform">
-        @Html.ActionLink("Synch All Accounts", "Synch", new { id = Model.Id }, new { onclick = "$('#divSynchPlatform').html('Synching...')" })
+    <div id="divSyncPlatform">
+        @Html.ActionLink("Sync All Accounts", "Sync", new { id = Model.Id }, new { onclick = "$('#divSyncPlatform').html('Syncing...')" })
     </div>
     <br />
 }
@@ -35,12 +35,13 @@ External Accounts:
             schema: {
                 data: 'data',
                 total: 'total'
-            }
+            },
+            sort: { field: 'Name', dir: 'asc' }
         });
 
         $('#grid').kendoGrid({
             dataSource: datasource,
-            height: 350,
+            height: 400,
             filterable: true,
             pageable: true,
             sortable: true,
@@ -60,9 +61,9 @@ External Accounts:
         LoadMaintenanceDetail(e.data.Id);
     }
 
-    function SynchAccount(acctId, synchUrl) {
-        $('#divAcctMaint' + acctId).html('Synching...');
-        $.post(synchUrl, function (data) {
+    function SyncAccount(acctId, syncUrl) {
+        $('#divAcctMaint' + acctId).html('Syncing...');
+        $.post(syncUrl, function (data) {
             LoadMaintenanceDetail(acctId);
         });
     }
