--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Pacing.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Pacing.cshtml
@@ -9,6 +9,8 @@
 } else {
     <h2>Performance</h2>
 }
+@Html.Partial("ChooseMonth", (SelectList)ViewBag.ChooseMonthSelectList)
+
 <table>
 <tr>
     <th>ExtAccts</th>
