--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
@@ -4,7 +4,7 @@
     var budg = Model.Budget;
 }
 
-<h2>MTD View</h2>
+<h2>Month/MTD View</h2>
 
 Month: @m.Date.ToString("MMM yyyy")
 <br /><br />
@@ -37,7 +37,7 @@ Month: @m.Date.ToString("MMM yyyy")
 <tr>
     <th></th>
     <th>MTD</th>
-    <th>Budget</th>
+    <th>Budget/Goal</th>
     <th>% reached</th>
 </tr>
 <tr>
