--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
@@ -10,7 +10,6 @@
     <th>Code</th>
     <th>Name</th>
     <th>Show...</th>
-    <th>Stats</th>
     <th></th>
 </tr>
 @foreach (var plat in Model)
@@ -18,10 +17,9 @@
 <tr>
     <td>@plat.Code</td>
     <td>@plat.Name</td>
-    <td>@Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "Accounts", new { platform = plat.Code }, null)</td>
     <td>
-        @Html.ActionLink("MTD", "Account", "Stats", new { platform = plat.Code }, null) |
-        @Html.ActionLink("LastMonth", "Account", "Stats", new { platform = plat.Code, date = lastMonth.ToShortDateString() }, null)
+        @Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "Accounts", new { platform = plat.Code }, null) |
+        @Html.ActionLink("Stats", "Account", "Stats", new { platform = plat.Code }, null)
     </td>
     <td>@Html.ActionLink("Maintenance", "Maintenance", new { id = plat.Id })</td>
 </tr>
