--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
@@ -1,7 +1,20 @@
 ﻿@using DirectAgents.Domain.Entities.TD
-@model IEnumerable<DirectAgents.Domain.DTO.TDStat>
+@model DirectAgents.Web.Areas.TD.Models.TDStatsVM
 
+@section scripts {
+<script>
+    function ChangeMonth(month) {
+        var url = '@Html.Raw(Url.Action("Account", new { platform = Model.PlatformCode, campId = Model.CampaignId, month = "monthVal" }))';
+        location.href = url.replace('monthVal', month);
+    }
+</script>
+}
 <h2>External Account Stats</h2>
+<div style="margin-bottom:10px">
+<form>
+    @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
+</form>
+</div>
 
 <table>
 <tr>
@@ -18,18 +31,18 @@
     <th>Total Conv</th>
     <th>Cost</th>
 </tr>
-@foreach (var stat in Model)
+@foreach (var stat in Model.Stats)
 {
 <tr>
     <td>@stat.ExtAccount.Platform.Name</td>
     <td>
         @if (stat.ExtAccount.Platform.Code == Platform.Code_AdRoll)
         {
-            @Html.ActionLink(stat.ExtAccount.Name, "AdRoll", new { advEid = stat.ExtAccount.ExternalId })
+            @Html.ActionLink(stat.ExtAccount.Name, "AdRoll", new { advEid = stat.ExtAccount.ExternalId, month = Model.MonthString })
         }
         else if (stat.ExtAccount.Platform.Code == Platform.Code_DBM)
         {
-            @Html.ActionLink(stat.ExtAccount.Name, "DBM", new { ioID = stat.ExtAccount.ExternalId })
+            @Html.ActionLink(stat.ExtAccount.Name, "DBM", new { ioID = stat.ExtAccount.ExternalId, month = Model.MonthString })
         }
         else
         {
@@ -46,6 +59,24 @@
     <td style="text-align:right">@stat.PostViewConv</td>
     <td style="text-align:right">@stat.TotalConv</td>
     <td style="text-align:right">@stat.Cost</td>
+</tr>
+}
+@if (Model.StatsTotal != null)
+{
+    var tot = Model.StatsTotal;
+<tr>
+    <th></th>
+    <th>@tot.Name</th>
+    <th style="text-align:right">@tot.Impressions</th>
+    <th style="text-align:right">@tot.Clicks</th>
+    <th style="text-align:center">@tot.CTR</th>
+    <th style="text-align:center">@tot.CPM</th>
+    <th style="text-align:center">@tot.CPC</th>
+    <th style="text-align:center">@tot.CPA</th>
+    <th style="text-align:right">@tot.PostClickConv</th>
+    <th style="text-align:right">@tot.PostViewConv</th>
+    <th style="text-align:right">@tot.TotalConv</th>
+    <th style="text-align:right">@tot.Cost</th>
 </tr>
 }
 </table>
