--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DirectAgents.Domain.Entities.TD.Campaign
 @{
-    string advId = (string)Session["advid"];
+    string advId = (string)Session["advId"]; // for when returning back to Index
 }
 
 <fieldset>
