--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
@@ -3,7 +3,7 @@
     var today = DateTime.Today;
     var startOfMonth = new DateTime(today.Year, today.Month, 1);
     var lastMonth = startOfMonth.AddMonths(-1);
-    string advId = Request["advid"];
+    string advId = (string)Session["advId"];
 }
 
 <h2>Campaigns</h2>
@@ -21,7 +21,7 @@
 @foreach (var camp in Model)
 {
 <tr>
-    <td>@Html.ActionLink("Edit", "Edit", new { id = camp.Id, advId = advId })</td>
+    <td>@Html.ActionLink("Edit", "Edit", new { id = camp.Id })</td>
     <td>@camp.Advertiser.Name</td>
     <td>@camp.Name</td>
     <td style="text-align:center">
@@ -39,7 +39,7 @@
     </td>
     <td>
         @if (!camp.ExtAccounts.Any() && !camp.Budgets.Any()) {
-            @Html.ActionLink("Delete", "Delete", new { id = camp.Id, advId = advId })
+            @Html.ActionLink("Delete", "Delete", new { id = camp.Id })
         }
     </td>
 </tr>
