--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
@@ -18,7 +18,7 @@
     <td>@plat.Code</td>
     <td>@plat.Name</td>
     <td>
-        @Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "Accounts", new { platform = plat.Code }, null) |
+        @Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "ExtAccounts", new { platform = plat.Code }, null) |
         @Html.ActionLink("Stats", "Account", "Stats", new { platform = plat.Code }, null)
     </td>
     <td>@Html.ActionLink("Maintenance", "Maintenance", new { id = plat.Id })</td>
