--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/Links.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/Links.cshtml
@@ -16,4 +16,4 @@ CakeSummary
 <br />
 Trading Desk
 <br />
-- @Html.ActionLink("By Account", "Account", "Stats", new { area = "td" }, null)
+- @Html.ActionLink("By ExtAccount", "ExtAccount", "Stats", new { area = "td" }, null)
