--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
@@ -19,7 +19,7 @@
     <td>@plat.Name</td>
     <td>
         @Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "ExtAccounts", new { platform = plat.Code }, null) |
-        @Html.ActionLink("Stats", "Account", "Stats", new { platform = plat.Code }, null)
+        @Html.ActionLink("Stats", "ExtAccount", "Stats", new { platform = plat.Code }, null)
     </td>
     <td>@Html.ActionLink("Maintenance", "Maintenance", new { id = plat.Id })</td>
 </tr>
